--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,10 +10,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-        <!-- https://favicon.io/emoji-favicons/money-bag/ -->
+        <!-- https://favicon.io/emoji-favicons/money-bag/ 
         <link href="/static/favicon.ico" rel="icon">
 
-        <link href="/static/styles.css" rel="stylesheet">        
+        <link href="/static/styles.css" rel="stylesheet">   -->     
 
         <title>Maze: {% block title %}{% endblock %}</title>
 
@@ -44,4 +44,8 @@
                 </div>
             </div>
         </nav>
+        <main class="container py-5 text-center">
+            {% block main %}{% endblock %}
+        </main>
     </body>
+</html>
