--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,8 +12,9 @@
 
         <!-- https://favicon.io/emoji-favicons/money-bag/ 
         <link href="/static/favicon.ico" rel="icon">
+          -->   
 
-        <link href="/static/styles.css" rel="stylesheet">   -->     
+        <link href="/static/styles.css" rel="stylesheet">   
 
         <title>Maze: {% block title %}{% endblock %}</title>
 
