--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,7 @@
                 <option>Left</option>
                 <option>Right</option>
             </select>
+            <button type="submit">Add Move</button>
         </form>
     </div>
     <div class="section">
@@ -50,6 +51,14 @@
             </thead>
             <tbody>
 <!--Loop through the database entries to display them in this table -->
+                {% for row in rows %}
+                    <tr>
+                        <td>{{ row.P1 }}</td>
+                        <td>{{ row.P2 }}</td>
+                        <td>{{ row.P3 }}</td>
+                        <td>{{ row.P4 }}</td>
+                    </tr>
+                {% endfor %}
             </tbody>
         </table>
     </div>
