--- a/templates/index.html
+++ b/templates/index.html
@@ -43,22 +43,27 @@
         <table>
             <thead>
                 <tr>
+                    <th>Move No.</th>
                     <th>Player 1</th>
                     <th>Player 2</th>
                     <th>Player 3</th>
                     <th>Player 4</th>
+                    <th>Team</th>
                 </tr>
             </thead>
             <tbody>
 <!--Loop through the database entries to display them in this table -->
                 {% for row in rows %}
                     <tr>
+                        <td>{{ row.id }}</td>
                         <td>{{ row.P1 }}</td>
                         <td>{{ row.P2 }}</td>
                         <td>{{ row.P3 }}</td>
                         <td>{{ row.P4 }}</td>
+                        <td>{{ row.Team }}</td>
                     </tr>
                 {% endfor %}
+                <button type="submit">Delete Last Row</button>
             </tbody>
         </table>
     </div>
