--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
                 <option>Left</option>
                 <option>Right</option>
             </select>
-            <button type="submit">Add Move</button>
+            <button type="submit" name="btn" value="move">Add Move</button>
         </form>
     </div>
     <div class="section">
@@ -63,7 +63,10 @@
                         <td>{{ row.Team }}</td>
                     </tr>
                 {% endfor %}
-                <button type="submit">Delete Last Row</button>
+                <form action="/" method="post">
+                    <button type="submit" name="btn" value="delete">Delete Last Row</button>
+                </form>
+                
             </tbody>
         </table>
     </div>
